removed link to venkman (until I get it started) added icon-before class to fix spacing  issues

--- a/devnull.js/public/css/style.css
+++ b/devnull.js/public/css/style.css
@@ -31,6 +31,10 @@
     margin-bottom: 1em;
 }
 
+i.icon-before {
+    margin-right: 5px;
+}
+
 .banner {
     display: block;
     width: 100%;
